src/objects/RaceSignUp__c.object
<CustomObject>
    <fields>
        <fullName>Charitable_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Charitable Org</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Charitable Org</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RaceSignUp (Charitable Org)</relationshipLabel>
        <relationshipName>RaceSignUp1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_1__c</fullName>
        <label>Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Racer__c</fullName>
        <label>Racer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Person Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RaceSignUp</relationshipLabel>
        <relationshipName>RaceSignUp</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>RaceSignUp</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>RaceSignUp Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RaceSignUp</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>